--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "axios": "^0.21.1",
     "cra-template": "1.1.2",
     "react": "^17.0.2",
+    "react-currency-conv": "^1.1.0",
+    "react-currency-conversion": "^1.0.5",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3"
   },
   "scripts": {
-    "start": "set PORT=3006 && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
